--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
+	<link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
 	  <div class="container">
 	    <div class="index-logo">
-		  <a class="logo-main-page" href="#"><img src="img/index-logo.png" width="100" height="50" alt="Barbershop"></a>
+		  <a class="logo-main-page" href="#"><img src="img/Logo.png" width="111" height="50" alt="Barbershop"></a>
 		</div>
 	    <nav class="main-navigation">
 		  <ul>
@@ -93,42 +94,42 @@
 	  
 	  <section class="catalog-content">
 	    <article class="catalog-item">
-		  <a class="catalog-picture" href="#"><img src="img/set-for-travel.png" width="100" height="100" alt="Набор для путешествий BAXTER OF CALIFORNIA"></a>
+		  <a class="catalog-picture" href="#"><img src="img/set-for-travel.jpg" width="220" height="165" alt="Набор для путешествий BAXTER OF CALIFORNIA"></a>
 		  <a class="catalog-item-title" href="#">Набор для путешествий "BAXTER OF CALIFORNIA"</a>
 		  <div class="catalog-item-price"> 2990 руб.</div>
 		  <a class="btn" href="#">КУПИТЬ</a>
 		</article>
 		
 		<article class="catalog-item">
-		  <a class="catalog-picture" href="#"><img src="img/hair-conditioner.png" width="100" height="100" alt="Увлажняющий кондиционер BAXTER OF CALIFORNIA"></a>
+		  <a class="catalog-picture" href="#"><img src="img/hair-conditioner.jpg" width="220" height="165" alt="Увлажняющий кондиционер BAXTER OF CALIFORNIA"></a>
 		  <a class="catalog-item-title" href="#">Увлажняющий кондиционер "BAXTER OF CALIFORNIA"</a>
 		  <div class="catalog-item-price"> 750 руб.</div>
 		  <a class="btn" href="#">КУПИТЬ</a>
 		</article>
 		
 		<article class="catalog-item">
-		  <a class="catalog-picture" href="#"><img src="img/hair-gel-suavecito.png" width="100" height="100" alt="Гель для волос SUAVECITO"></a>
+		  <a class="catalog-picture" href="#"><img src="img/hair-gel-suavecito.jpg" width="220" height="165" alt="Гель для волос SUAVECITO"></a>
 		  <a class="catalog-item-title" href="#">Гель для волос "SUAVECITO"</a>
 		  <div class="catalog-item-price"> 290 руб.</div>
 		  <a class="btn" href="#">КУПИТЬ</a>
 		</article>
 		
 		<article class="catalog-item">
-		  <a class="catalog-picture" href="#"><img src="img/clay-for-hair.png" width="100" height="100" alt="Глина для укладки волос AMERICAN CREW"></a>
+		  <a class="catalog-picture" href="#"><img src="img/clay-for-hair.jpg" width="220" height="165" alt="Глина для укладки волос AMERICAN CREW"></a>
 		  <a class="catalog-item-title" href="#">Глина для укладки волос "AMERICAN CREW"</a>
 		  <div class="catalog-item-price"> 500руб.</div>
 		  <a class="btn" href="#">КУПИТЬ</a>
 		</article>
 		
 		<article class="catalog-item">
-		  <a class="catalog-picture" href="#"><img src="img/hair-gel-american-crew.png" width="100" height="100" alt="Гель для волос AMERICAN CREW"></a>
+		  <a class="catalog-picture" href="#"><img src="img/hair-gel-american-crew.jpg" width="220" height="165" alt="Гель для волос AMERICAN CREW"></a>
 		  <a class="catalog-item-title" href="#">Гель для укладки волос "AMERICAN CREW"</a>
 		  <div class="catalog-item-price"> 300руб.</div>
 		  <a class="btn" href="#">КУПИТЬ</a>
 		</article>
 		
 		<article class="catalog-item">
-		  <a class="catalog-picture" href="#"><img src="img/set-for-shaving.png" width="100" height="100" alt="Гель для волос AMERICAN CREW"></a>
+		  <a class="catalog-picture" href="#"><img src="img/set-for-shaving.jpg" width="220" height="165" alt="Гель для волос AMERICAN CREW"></a>
 		  <a class="catalog-item-title" href="#">Набор для бритья "BAXTER OF CALIFORNIA"</a>
 		  <div class="catalog-item-price"> 3900руб.</div>
 		  <a class="btn" href="#">КУПИТЬ</a>
