--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
+	<link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
 	  <div class="container">
 	    <div class="index-logo">
-		  <a class="logo-main-page" href="#"><img src="img/index-logo.png" width="100" height="50" alt="Barbershop"></a>
+		  <a class="logo-main-page" href="#"><img src="img/Logo.png" width="111" height="50" alt="Barbershop"></a>
 		</div>
 	    <nav class="main-navigation">
 		  <ul>
@@ -36,7 +37,6 @@
 	  </div>
 	</header>
 	
-	
 	<main class="container">
 	  <h1>НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»</h1>
 	  <div class="breadcrumbs">
@@ -48,16 +48,16 @@
 	  
 	  <section class="gallery">
 	    <div class="gallery-content">
-		  <img src="img/main-picture.png" width="100" height="50" alt="TRAVEL KIT">  
+		  <img src="img/item-main-pic.jpg" width="460" height="500" alt="TRAVEL KIT">  
 		</div>
 		<div class="gallery-content-preview">
-		  <img src="img/small-picture-1.png" width="100" height="50" alt="">
+		  <img src="img/item-small-pic-1.jpg" width="142" height="150" alt="">
 		</div>
 		<div class="gallery-content-preview">
-		  <img src="img/small-picture-2.png" width="100" height="50" alt="">
+		  <img src="img/item-small-pic-2.jpg" width="142" height="150" alt="">
 		</div>
 		<div class="gallery-content-preview">
-		  <img src="img/small-picture-3.png" width="100" height="50" alt="">
+		  <img src="img/item-small-pic-3.jpg" width="142" height="150" alt="">
 		</div>
 	  </section>
 	  
@@ -71,13 +71,10 @@
 		ДЛЯ БРИТЬЯ , КРЕМ ПОСЛЕ БРИТЬЯ, ШАМПУНЬ. НАБОР ТАКЖЕ МОЖЕТ
 		СТАТЬ ОТЛИЧНЫМ ПОДАРКОМ.
 		</p>
-		
-		<div class="purchase">
-		  <div class="purchase-price"> 2900 РУБ.</div>
+		<div class="buy">
+		  <div class="buy-price"> 2900 РУБ.</div>
 		  <a class="btn" href="#">КУПИТЬ</a>
 		</div>
-		
-		
 		<div class="set-info">
 		  <h2>В НАБОР ВХОДЯТ:</h2>
 		  <ul>
@@ -95,7 +92,6 @@
 		</div>
 	  </section>
 	</main>
-	
 	
 	<footer class="main-footer">
 	  <div class="container">
