Исправления в разметке, фильтр списком

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -64,13 +64,15 @@
 	  <section class="product-info">
 	    <p>ЕСТЬ В НАЛИЧИИ</p>
 		<span class="vendor code">АРТИКУЛ:DEXTER-AE</span>
-		<p>TRAVEL KIT - НЕОБХОДИМЫЙ АКСЕССУАР ВО ВРЕМЯ ЛЮБОГО
+		<div class="description">
+		  <p>TRAVEL KIT - НЕОБХОДИМЫЙ АКСЕССУАР ВО ВРЕМЯ ЛЮБОГО
 		ПУТЕШЕСТВИЯ. В АККУРАТНОЙ КОЖАНОЙ СУМКЕ НАХОДИТСЯ ВСЕ,
 		ЧТО НУЖНО ДЛЯ БРИТЬЯ И УХОДА ЗА КОЖЕЙ ВО ВРЕМЯ РАБОЧЕЙ ПОЕЗДКИ
 		ИЛИ ОТДЫХА: СРЕДСТВА ДЛЯ УМЫВАНИЯ, УВЛАЖНЯЮЩИЙ КРЕМ, КРЕМ
 		ДЛЯ БРИТЬЯ , КРЕМ ПОСЛЕ БРИТЬЯ, ШАМПУНЬ. НАБОР ТАКЖЕ МОЖЕТ
 		СТАТЬ ОТЛИЧНЫМ ПОДАРКОМ.
-		</p>
+		  </p>
+		</div>
 		<div class="buy">
 		  <div class="buy-price"> 2900 РУБ.</div>
 		  <a class="btn" href="#">КУПИТЬ</a>
